--- a/src/index.css
+++ b/src/index.css
@@ -176,8 +176,25 @@ li {
 /* Home */
 .homeContainer {
 	margin-top: 2rem;
+	height: 100vh;
 }
-
+/* Advanced Search */
+.advancedSearch {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-top: 1rem;
+}
+.fillterSearch {
+	display: flex;
+}
+.fillterSearch > div {
+	margin-left: 1.5rem;
+	margin-bottom: 3rem;
+}
+.advancedSearch > div {
+	margin-left: 1rem;
+}
 /* Table */
 .table {
 	width: 100%;
@@ -221,7 +238,7 @@ img.small {
 	width: 100%;
 }
 /* Movies Screen */
-.movie-tv-container{
+.movie-tv-container {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
@@ -231,18 +248,9 @@ img.small {
 	border-radius: 3px;
 	box-shadow: 3px 3px 5px rgpa(0, 0, 0, 0.1);
 	margin: 1rem;
-	width: 300px;
-	height: 300px;
+	width: 30rem;
+	height: 45rem;
 	perspective: 1000px;
-}
-.flip-card-inner {
-	position: relative;
-	width: 100%;
-	height: 100%;
-	text-align: center;
-	transition: transform 0.6s;
-	transform-style: preserve-3d;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 .movie img {
 	object-fit: cover;
@@ -262,8 +270,6 @@ img.small {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	/* background-color: rgb(255, 255, 255); */
-	/* opacity: 0.3; */
 	border-top-left-radius: 3px;
 	border-top-right-radius: 3px;
 	box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
@@ -275,31 +281,22 @@ img.small {
 	backface-visibility: hidden;
 	overflow: auto;
 	transform: rotateY(180deg);
-	z-index: 0;
-}
-.detailBtn {
-	position: absolute;
-	z-index: 1;
-	background-color: #12bbd1;
-	padding: 1.5rem;
-	border-radius: 1rem;
-}
-.detailBtn .detailBtnPro {
-	color: black;
 }
 .flip-card-front {
 	position: absolute;
 	width: 100%;
 	height: 100%;
+	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
-.movie:hover .flip-card-inner {
-	transform: rotateY(180deg);
+.flip-card-front:hover {
+	cursor: pointer;
+	box-shadow: 0 16px 36px 0 rgba(4, 0, 255, 0.2);
+	width: 30.5rem;
+	height: 45.5rem;
 }
-.movie:hover .movie-info {
-	transform: rotateY(180deg);
-}
+
 /* Movie Screen */
-.moviesTitle{
+.moviesTitle {
 	text-align: center;
 }
 .movieScreenContainer {
@@ -346,15 +343,28 @@ img.small {
 	width: 100%;
 	margin-bottom: 1rem;
 }
-.actors{
+.actors {
 	text-align: center;
-	
 }
-.actorsName{
-margin-top: 0.5rem;
+.actorsName {
+	display: flex;
+}
+.actorNameAndPic {
+	display: flex;
+	flex-direction: column;
+	margin: 0.5rem;
+	width: 15rem;
+	background-color: #eb0808;
+	justify-content: center;
+	align-items: center;
+	padding: 1rem;
+}
+.actorNameAndPic img {
+	width: 10rem;
+	height: 10rem;
 }
 /* Tv Shows */
-.tvShowsTitle{
+.tvShowsTitle {
 	text-align: center;
 }
 /* Loader */
