--- a/src/index.css
+++ b/src/index.css
@@ -367,6 +367,32 @@ img.small {
 .tvShowsTitle {
 	text-align: center;
 }
+/* ReactPaginate */
+.paginationBttns {
+	margin-left: 8rem;
+	width: 80%;
+	height: 40px;
+	list-style: none;
+	display: flex;
+	justify-content: center;
+}
+.paginationBttns a {
+	padding: 10px;
+	margin: 8px;
+	border-radius: 5px;
+	border: 1px solid #2b2eff;
+	color: #2b2eff;
+	cursor: pointer;
+}
+.paginationBttns a:hover {
+	color: white;
+	background-color: #2b2eff;
+}
+.paginationActive a {
+	color: white;
+	background-color: #2b2eff;
+}
+
 /* Loader */
 .loader {
 	font-size: 10px;
