--- a/src/index.css
+++ b/src/index.css
@@ -170,7 +170,13 @@ a.brand span {
 a {
 	text-decoration: none;
 }
-li {
+.dropdown-content li {
+	margin-top: 0.3rem;
+	list-style: none;
+}
+.dropdown-content li:hover {
+	margin-top: 0.3rem;
+	background-color: #09606b8e;
 	list-style: none;
 }
 /* Home */
