--- a/src/index.css
+++ b/src/index.css
@@ -182,7 +182,31 @@ a {
 /* Home */
 .homeContainer {
 	margin-top: 2rem;
-	height: 100vh;
+	width: 95vw;
+	box-sizing: border-box;
+	display: flex;
+	flex-direction: column;
+	gap: 30px;
+}
+.nowPlayingMovies{
+	box-sizing: border-box;
+	overflow: hidden;
+	height: 50rem;
+	margin-left:70px;
+	position: relative;
+}
+.nowPlayingMovies Button{
+ position: absolute;
+ top: 50%;
+ z-index: 100;
+}
+
+.next{
+	right:1rem;
+}
+.back{
+	left: 0rem;
+	
 }
 /* Advanced Search */
 .advancedSearch {
