--- a/src/index.css
+++ b/src/index.css
@@ -314,6 +314,7 @@ img.small {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	color: #000000;
 }
 .movieScreenContainer2 {
 	margin: 0 10rem;
