add favorite movies and made it work and heart is red

--- a/src/index.css
+++ b/src/index.css
@@ -264,8 +264,14 @@ img.small {
 	font-size: 12px;
 }
 .heart{
+	position: absolute;
+	z-index: 100;
+	cursor: pointer;
 	color: #ffffff;
 	font-size: 2rem;
+}
+.heartFavorite{
+	color: #eb0808;
 }
 .heart:hover{
 	color: #eb0808;
