--- a/src/index.css
+++ b/src/index.css
@@ -334,13 +334,6 @@ img.small {
 .moviesTitle {
 	text-align: center;
 }
-.movieScreenContainer {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	color: #000000;
-}
 .movieScreenContainer2 {
 	margin: 0 10rem;
 	margin-top: 1rem;
@@ -348,14 +341,16 @@ img.small {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	background-color: #f4f5f4;
+	color: #ffffff;
+	background-color: #000000;
 }
 .picture img {
 	max-height: 30rem;
-	width: 100%;
+	max-width: 100%;
 	opacity: 0.8px;
 }
 .overView {
+	text-align: center;
 	margin: 2rem 1rem;
 }
 .rating {
@@ -375,7 +370,7 @@ img.small {
 	margin-left: 0.5rem;
 }
 .border {
-	border-top: black 3px solid;
+	border-top: rgb(255, 255, 255) 3px solid;
 	width: 100%;
 	margin-bottom: 1rem;
 }
@@ -385,19 +380,25 @@ img.small {
 .actorsName {
 	display: flex;
 }
-.actorNameAndPic {
-	display: flex;
-	flex-direction: column;
-	margin: 0.5rem;
-	width: 15rem;
-	background-color: #eb0808;
-	justify-content: center;
-	align-items: center;
-	padding: 1rem;
+.actorNameAndPic:hover {
+	background-color: #0b8ba1;
 }
 .actorNameAndPic img {
+	margin-bottom: 1rem;
+	border-radius: 2rem;
 	width: 10rem;
 	height: 10rem;
+	color: #061f24;
+}
+/* Movies By Actor */
+.movieByActor{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+.moviesInActorPage{
+	display: flex;
 }
 /* Tv Shows */
 .tvShowsTitle {
