--- a/src/index.css
+++ b/src/index.css
@@ -216,6 +216,13 @@ img.small {
 	width: 100%;
 }
 /* Movies Screen */
+.movieScreenContainer {
+	margin-top: 1rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
 .movie-tv-container {
 	display: flex;
 	flex-wrap: wrap;
@@ -391,14 +398,29 @@ img.small {
 	color: #061f24;
 }
 /* Movies By Actor */
-.movieByActor{
+.movieByActor {
+	/* margin: 0 10rem; */
+	margin-top: 1rem;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	color: #ffffff;
 }
-.moviesInActorPage{
+.moviesInActorPage {
 	display: flex;
+}
+.movieByActorNameAndImg {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 1rem;
+}
+.movieByActorNameAndImg img {
+	border-radius: 5rem;
+	margin-left: 1.5rem;
+	height: 15rem;
+	width: 15rem;
 }
 /* Tv Shows */
 .tvShowsTitle {
@@ -406,12 +428,13 @@ img.small {
 }
 /* ReactPaginate */
 .paginationBttns {
-	margin-left: 8rem;
+	/* margin-left: 8rem; */
 	max-width: 80vw;
 	height: 40px;
 	list-style: none;
 	display: flex;
 	justify-content: center;
+	align-items: center;
 }
 .paginationBttns a {
 	padding: 10px;
