working on tvshows

--- a/src/index.css
+++ b/src/index.css
@@ -395,7 +395,7 @@ img.small {
 	margin-bottom: 1rem;
 	border-radius: 2rem;
 	width: 10rem;
-	height: 10rem;
+	height: 12rem;
 	color: #061f24;
 }
 /* Movies By Actor */
@@ -424,8 +424,27 @@ img.small {
 	width: 15rem;
 }
 /* Tv Shows */
+.tvShowScreenContainer {
+	margin-top: 1rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
 .tvShowsTitle {
 	text-align: center;
+}
+.seasonAndTitle {
+	display: flex;
+}
+.allSeasons {
+	margin-right: 2rem;
+}
+.movieScreenContainer2 .imgPoster img{
+	margin-top: 2rem;
+	border-radius: 5rem;
+	height: 10rem;
+	width: 10rem;
 }
 /* ReactPaginate */
 .paginationBttns {
