--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 html {
 	font-size: 62.5%;
 	box-sizing: border-box;
-	color: white;
+	color: #ffffff;
 }
 body {
 	margin: 0;
@@ -15,9 +15,12 @@ body {
 #root {
 	height: 100%;
 }
-/* :root {
-	--background-color: red;
-} */
+
+:root {
+	--nav-background-color: #ffffff;
+	--body-background-color: #000000;
+}
+
 /* Layout */
 main {
 	grid-area: main;
@@ -48,7 +51,7 @@ button {
 	-moz-osx-font-smoothing: grayscale;
 }
 button {
-	background-color: #f8f8f8;
+	background-color: #ffffff;
 	cursor: pointer;
 }
 
@@ -57,23 +60,24 @@ button:hover {
 }
 button.primary {
 	background-color: #000000;
-	color: white;
+	color: #ffffff;
 }
 /* Header */
-.mode{
+.mode {
 	height: 3rem;
 	width: 3rem;
 	background-color: #ffffff;
 	border-radius: 50%;
 }
-.mode:hover{
+.mode:hover {
+	opacity: 0.8;
 	cursor: pointer;
 }
 .picAndName {
 	display: flex;
 }
 .profilePicInNav {
-	border: 0.1rem solid black;
+	border: 0.1rem solid #000000;
 	height: 5rem;
 	width: 5rem;
 	margin-bottom: 1rem;
@@ -84,13 +88,13 @@ button.primary {
 	display: flex;
 }
 .nav .container ul a {
-	color: black;
+	color: #000000;
 	margin-left: 30px;
 	text-decoration: none;
 	transition: 0.5s;
 }
 header a {
-	color: black;
+	color: #000000;
 	padding: 1rem;
 	transition: 0.5s;
 }
@@ -98,12 +102,12 @@ header a:hover {
 	color: rgb(255, 169, 9);
 }
 a.brand {
-	color: black;
+	color: #000000;
 	font-size: 3.5rem;
 	font-weight: bold;
 }
 a.brand span {
-	color: white;
+	color: #ffffff;
 }
 .row {
 	display: flex;
@@ -159,8 +163,8 @@ a.brand span {
 	justify-content: center;
 	padding: 1rem;
 	z-index: 1;
-	border: black solid 0.1rem;
-	background-color: black;
+	border: #000000 solid 0.1rem;
+	background-color: #000000;
 	margin: 0;
 	margin-top: 0.4rem;
 	border-radius: 0.5rem;
@@ -171,7 +175,7 @@ a.brand span {
 /* Common */
 a {
 	text-decoration: none;
-	color: white;
+	color: #ffffff;
 }
 .dropdown-content li {
 	margin-top: 0.3rem;
@@ -321,8 +325,8 @@ img.small {
 	width: 100%;
 	height: 100%;
 	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-	color: white;
-	background: black;
+	color: #ffffff;
+	background: #000000;
 	border-top-right-radius: 15px;
 	border-top-left-radius: 15px;
 }
@@ -474,12 +478,12 @@ img.small {
 	cursor: pointer;
 }
 .paginationBttns a:hover {
-	color: white;
+	color: #ffffff;
 	background-color: #000000;
 }
 .paginationActive a {
-	color: white;
-	background-color: #2b2eff;
+	color: #ffffff;
+	background-color: #000000;
 }
 
 /* Loader */
@@ -546,4 +550,3 @@ img.small {
 		transform: rotate(360deg);
 	}
 }
-
