--- a/src/index.css
+++ b/src/index.css
@@ -470,7 +470,7 @@ img.small {
 .allSeasons {
 	margin-right: 2rem;
 }
-.movieScreenContainer2 .imgPoster img {
+.imgPoster img {
 	margin-top: 2rem;
 	border-radius: 5rem;
 	height: 10rem;
